--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/pg-adapter": "^0.2.14",
+    "@auth/pg-adapter": "^1.11.1",
     "clsx": "^2.1.0",
-    "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.5",
+    "next": "^14.2.35",
+    "next-auth": "^5.0.0-beta.30",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
@@ -21,7 +21,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
