--- a/package.json
+++ b/package.json
@@ -24,5 +24,18 @@
     "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
-  }
+  },
+  "description": "Upvote is a Reddit-esque web application that allows users to create posts, upvote and downvote posts, and comment on posts in a multi-threaded, nested list.",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/clarioncbbii/didit-reddit-upvote-example.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/clarioncbbii/didit-reddit-upvote-example/issues"
+  },
+  "homepage": "https://github.com/clarioncbbii/didit-reddit-upvote-example#readme"
 }
